{
    "name": "ControllerInput",
    "maps": [
        {
            "name": "Gameplay",
            "id": "6ea360be-684e-4b7e-a696-79da4aaf5588",
            "actions": [
                {
                    "name": "SouthButton",
                    "type": "Button",
                    "id": "a4370d10-2a5b-458a-888a-113ef313cfea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EastButton",
                    "type": "Button",
                    "id": "4446dd60-5974-413a-bfb5-8c87f0fef8b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NorthButton",
                    "type": "Button",
                    "id": "80066e51-6ebb-4296-8b48-6bde94f6e518",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WestButton",
                    "type": "Button",
                    "id": "ef704897-e9e9-426d-8733-42783d7e2099",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DpadUp",
                    "type": "Button",
                    "id": "0567b873-ba62-46cd-9497-b4db09cab9a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DpadDown",
                    "type": "Button",
                    "id": "8e4df65b-5ed7-4028-b9ca-619d04d4b74d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DpadLeft",
                    "type": "Button",
                    "id": "6d56156b-5fbe-4fd6-8c5f-251991447389",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DpadRight",
                    "type": "Button",
                    "id": "2554f5df-f761-4e63-921f-ba046f907036",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L1",
                    "type": "Button",
                    "id": "a70902d6-c839-4c84-8b8e-06f749db6215",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "L2",
                    "type": "Button",
                    "id": "0d7da876-b255-40d6-a44b-9707001d436e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R1",
                    "type": "Button",
                    "id": "ee59a27a-8830-43d6-a6cc-3473b4eccf00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "R2",
                    "type": "Button",
                    "id": "c3287bfa-040c-4049-b4e7-aea2b8730f98",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Start",
                    "type": "Button",
                    "id": "b6af9b5e-22d8-4277-b6f2-f9d0ab7e18cd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "1935848e-8c5e-44ab-aaa9-2d6e0f8ca8b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LStick",
                    "type": "Value",
                    "id": "9a67c315-92e4-4caa-8b6f-e4dbf9fbb44b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "New action",
                    "type": "Value",
                    "id": "63807f87-58fb-4d0d-8bd6-2cda8cf22a73",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LStickPress",
                    "type": "Button",
                    "id": "5319214d-7fd3-46c1-83e7-7f78600cf47b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RStickPress",
                    "type": "Button",
                    "id": "c5f13c4b-91a3-4589-8308-79c78f21796f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RStick",
                    "type": "Value",
                    "id": "ffff60c3-009d-49b8-a948-7bf4f35f7175",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e4b391d-0edc-4771-b540-a8a448c6eb4d",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SouthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a485856-f517-4a81-8018-4e9e2691d456",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EastButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "270c0171-ac7f-4433-82c5-194e040e9587",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NorthButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ca5352a-2efe-4009-8b23-de725ee37739",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WestButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a727541e-4587-4114-a9f5-389b97a46c0c",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DpadDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73bb6ade-ad71-43fd-aa37-5fe1725770c5",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DpadLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ccb7b46f-919c-4f11-8635-e19d48194f65",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DpadRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a1285ee8-bb53-49d4-ab20-663b0f5d63d9",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "10f6175f-4e37-4742-a337-3455e343462b",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "L2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdd67033-86a9-4565-961e-05f2801042a7",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c405280-70fe-4a32-b8fd-0a4d78d6cf11",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "R2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dbb39761-635b-473f-a9ee-1d342d4968f3",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e198a83f-2c0c-4469-8c07-9086bce14fc3",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f57910c-9743-4c31-9a58-4e1724c2dbed",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DpadUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8790a216-e651-4479-95fd-30c0ac3fb80f",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e745a36-d79f-47e9-b052-120f0ddbcd15",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4bf4e8d3-ae37-4184-b4b9-ceb8f5cee3bf",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68dbfa1b-b849-4118-9a5a-bf06be8efeec",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RStickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c2313126-27c3-40b2-9872-777e926033fb",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}